[gd_scene load_steps=38 format=2]

[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=1]
[ext_resource path="res://Neutral/llama_walk.png" type="Texture" id=2]
[ext_resource path="res://Neutral/llama_eat.png" type="Texture" id=3]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Neutral/Lhama.gd" type="Script" id=5]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Neutral/BatDetctionZone.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "RunDown",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "RunLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "RunRight",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "RunUp",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "StartEating",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Eating",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "StopEating",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=32]
radius = 12.6667

[sub_resource type="CapsuleShape2D" id=33]
radius = 12.0

[sub_resource type="CircleShape2D" id=34]
radius = 74.5356

[node name="Lhama" type="KinematicBody2D"]
position = Vector2( 0, -7 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 64
collision_mask = 3
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Eating"
frame = 1
playing = true

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 24 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20.6667 )
rotation = 1.5708
shape = SubResource( 32 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 128

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -1, 3 )
rotation = 1.5708
shape = SubResource( 33 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
max_health = 3

[node name="BatDetctionZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="BatDetctionZone" index="0"]
modulate = Color( 1, 1, 1, 0.341176 )
position = Vector2( 0, 13.3333 )
shape = SubResource( 34 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="BatDetctionZone"]
